--- a/client/src/ItemActionPane/style.css
+++ b/client/src/ItemActionPane/style.css
@@ -23,12 +23,12 @@
   height: 44px;
   margin: 0px 5px;
 }
-@media (max-width: 1000px) and (min-width: 750px) {
+@media (max-width: 1000px) and (min-width: 844px) {
   .reserve_btn{
     width: 130px !important;
   }
 }
-@media (max-width: 749px) {
+@media (max-width: 844px) {
   .modal_brand{
     margin-top: 25px;
   }
